User dp Dropdown shifts Live Search Results Container - temp fix added to display users full name on homepage

--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -441,7 +441,7 @@ input:checked+.slider:before {
 
 .dropdown-content_user {
   display: none;
-  margin-left: -10%;
+  margin-left: 0%;
   position: absolute;
   background-color: var(--ev-dark-mode-button-background);
   min-width: 250px;
